--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,6 @@ yarn_mappings=1.16.1+build.21
 loader_version=0.12.0
 # Mod Properties
 mod_version=1.1.0
-maven_group=gregor0410
+maven_group=com.gregor0410
 archives_base_name=lazystronghold
 
