--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.16.1
-yarn_mappings=1.16.1+build.21
+minecraft_version=20w14infinite
+yarn_mappings=20w14infinite+build.4
 loader_version=0.13.3
 # Mod Properties
 mod_version=1.1.3
