--- a/gradle.properties
+++ b/gradle.properties
@@ -2,9 +2,9 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.15.2
-yarn_mappings=1.15.2+build.17
-loader_version=0.13.3
+minecraft_version=20w14infinite
+yarn_mappings=20w14infinite+build.4
+loader_version=0.14.9
 # Mod Properties
 mod_version=1.1.3
 maven_group=com.gregor0410
