--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
 minecraft_version=1.16.1
-yarn_mappings=1.16.1+build.21
-loader_version=0.13.3
+yarn_mappings=1.16.1-build.24
+loader_version=0.16.9
 # Mod Properties
 mod_version=1.1.3
 maven_group=com.gregor0410
